--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   <body>
     <div id="root"></div>
     <!-- Main Script -->
-    <script type="module" src="/src/Main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
